Updated 传感器数据一键式上云的使用说明 (markdown)

--- a/tutorial/传感器数据一键式上云的使用说明.md
+++ b/tutorial/传感器数据一键式上云的使用说明.md
@@ -164,3 +164,20 @@ aos make udataapp@developerkit dtc=1
 
 点击查看按键，如果已经开启物理传感器，则在云端可以看到上传的数据
 ![](https://i.imgur.com/uDLIM03.png)
+
+## 附录
+云端数据类型如下所示
+
+| 传感器名称 |      简称       |  单位   | 云端数据类型  |                                说明 |
+| ----- | :-----------: | :---: | :----: | --------------------------------: |
+| 加速度计  |      acc      |  g   | float | 1 g = 9.8 m/s2（米每平方秒） |
+| 陀螺仪   |     gyro      | dps  | float |   dps(度每秒) |
+| 磁力计   |      mag      |  G   | float |                1 G(Gaus) = 1000 mG(毫高斯) |
+| 接近光   |   proximity   |   --  | int |                 代表物体到传感器的距离大小，单位：无 |
+| 光感计   |      als      |  lux  | int |                             亮度流明值 |
+| 气压计   | baro/pressure |  hPa（百帕）   | int |                100 Pa = 1 hPa（百帕） |
+| 温度计   |     temp      | °c | float |                            0.1摄氏度 |
+| 湿度计   |     humi      |   %   | float |                   相对湿度RH，云端用%（百分比）表示 |
+| 心率计   |      hr       |  bpm  | int |                          bpm：次数每秒 |
+
+##### 注：后期会迭代增加新的传感器数据单位。
